# FastWaveFrontend-eGUI

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: main.rs  signal_select.rs  theme.rs  vcd_viewer.rs
