[package]
name = "fastwave_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastwave_backend = { path = "./FastWaveBackend" }
# egui_extras = {path = "../egui/crates/egui_extras"}
# eframe = {path = "../egui/crates/eframe"}
# egui = {path = "../egui/crates/egui"}
# epaint = {path = "../egui/crates/epaint"}
egui_extras = { git = "https://github.com/emilk/egui/", rev = "e0c7533ede5" }
eframe = { git = "https://github.com/emilk/egui/", rev = "e0c7533ede5" }
egui   = { git = "https://github.com/emilk/egui/", rev = "e0c7533ede5" }
epaint   = { git = "https://github.com/emilk/egui/", rev = "e0c7533ede5" }
dark-light = "0.2.2"